# bf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  run_test.sh
include/: assembly.hpp  command.hpp  compiler.hpp  cxxopts.hpp  emulator.hpp  formats.hpp  image.hpp
src/: assembly.cpp  command.cpp  compiler.cpp  emulator.cpp  image.cpp  main.cpp  main_compiler.cpp  main_debugger.cpp  main_emulator.cpp  main_flasher.cpp
tests/: hello.bfa  hello2.bfa  labels.bfa  pi.bf
